# Auth-Service_API

./: .env  .gitignore  Cargo.toml  README.md  yarte.toml
migrations/2021-03-29-083650_users/: up.sql
migrations/2021-03-29-083658_confirmations/: up.sql
src/: auth_handler.rs  email_service.rs  errors.rs  main.rs  models.rs  password_handler.rs  register_handler.rs  schema.rs  templates.rs  tests.rs  utils.rs  vars.rs
templates/includes/: head.hbs  message.hbs
templates/layouts/: base.hbs
templates/pages/: help_page.hbs  me.hbs  password.hbs  register.hbs  sign_in.hbs
