[package]
name = "auth_service"
version = "0.1.2"
authors = ["abugh <abughalib64@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-rt = "2.2"
actix-session = {version = "0.7", features = ["cookie-session"]}
actix-web = "4.0"
argonautica = "0.2"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
uuidv07 = { version = "1.1", optional = true, package = "uuid"}
dotenv = "0.15"
env_logger = "0.9"
lettre = { version = "0.9" }
lettre_email = "0.9"
native-tls = "0.2"
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.1", features = ["serde", "v4"] }
yarte="0.15"
actix-cors="0.6"
actix-redis="0.12"
